--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,8 +1,8 @@
 <kendo-grid [data]="users" [height]="410">
   <kendo-grid-column field="name" title="Имя пользователя"></kendo-grid-column>
-  <kendo-grid-column field="sex" title="Пол"></kendo-grid-column>
+  <kendo-grid-column field="sex.text" title="Пол"></kendo-grid-column>
   <kendo-grid-column field="dateOfBirth" title="Дата рождения"></kendo-grid-column>
-  <kendo-grid-column field="directionOfStudy" title="Направление обучения"></kendo-grid-column>
+  <kendo-grid-column field="directionOfStudy.text" title="Направление обучения"></kendo-grid-column>
   <kendo-grid-column field="startDateOfTraining" title="Дата начала обучения"></kendo-grid-column>
   <kendo-grid-column field="endDateOfTraining" title="Дата конца обучения"></kendo-grid-column>
 </kendo-grid>
